Refactor: 일정 생성용 DTO와 수정용 DTO로 분리
- 모임 일정 생성에만 classId로 ClassEntity를 조회하여 새로운 일정 생성
- 수정, 삭제, 조회 API는 classId를 ClassEntity 조회에만 사용함